Fix missing background at bottom of page

--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -41,6 +41,7 @@ body > div {
 
 .container {
   min-height: 100%;
+  padding-bottom: 8px;
   font-family: sans-serif;
   background: $base3;
   color: $base00;
